--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
       <p>Il me faut plusieurs choses:</p>
       <ul>
         <li>Une baguette</li>
-        <li>2 <span style = "color:red">kilos</span> de tomates</li>
-        <li>3 <span style = "color:green">litres</span> de lait</li>
-        <li>5 <span style = "font-weight:bold">boites</span> de chewing gum</li>
-
-      <p><span style = "font-style:italic;">Payer en liquide ou par chèque.</span></p>
-
+        <li>2 <span style = "color:red;">kilos</span> de tomates</li>
+        <li>3 <span style = "color:green;">litres</span> de lait</li>
+        <li>5 <span style = "font-weight:bold;">boites</span> de chewing gum</li
+      </ul>
+      <p style="font-style:italic">Payer en liquide ou par chèque.</p>
   </body>
 </html>
